--- a/EnemizerWeb/src/styles.css
+++ b/EnemizerWeb/src/styles.css
@@ -1,2 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 /* @import url('https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css'); */
+@import '~https://fonts.googleapis.com/icon?family=Material+Icons';
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
